# carservicetracker

./: .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  service.sh
backend/.devcontainer/: devcontainer.json
backend/app/: __init__.py  app.py  routes.py  schemas.py
backend/app/auth/: routes.py
backend/app/helpers/: __init__.py
backend/app/models/: __init__.py  base.py  company.py  confirm.py  invalidated_token.py  site.py  user.py  user_site_role.py
backend/app/routes/: __init__.py  auth.py  company.py  confirm.py  main.py  site.py  user.py
backend/app/schemas/: __init__.py  company.py  login.py  site.py  user.py
backend/app/services/: company.py  email.py  user.py
backend/app/templates/: confirm_email.html
backend/app/users/: models.py  routes.py
backend/migrations/: alembic.ini
backend/migrations/versions/: 202409202304_98f8291dd04b_init_user.py  202409282302_a753fb214e3b_init.py  202409290031_f42a299a2168_updatesiteurl.py
backend/templates/: confirm_email.html  modify_email.html
frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  service.sh
frontend/.devcontainer/: devcontainer.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  material.module.ts
frontend/src/app/guards/: auth.guard.ts
frontend/src/app/models/: auth.model.ts  (+2 more)
frontend/src/environments/: environment.prod.ts  environment.ts
(+24 files in other folders)
